--- a/app/assets/stylesheets/welcome.css
+++ b/app/assets/stylesheets/welcome.css
@@ -43,6 +43,10 @@ body {
     font-weight: 300;
     letter-spacing: 1px;
   }
+
+  .welcome-link {
+    color: #3c7252;
+  }
   
   /* Login Button Styles */
   .login-btn {
