--- a/app/views/welcome/index.html.erb
+++ b/app/views/welcome/index.html.erb
@@ -54,11 +54,11 @@
     <section class="links card">
       <h2><a href="/explore-more" class="section-link">Explore More</a></h2>
       <ul>
-        <li><a href="/yoga-routines">Yoga Routines</a> - Discover daily yoga sequences</li>
-        <li><a href="/nutrition-tips">Nutrition Tips</a> - Fuel your body with healthy foods</li>
-        <li><a href="/mindfulness">Mindfulness Practices</a> - Embrace a peaceful state of mind</li>
-        <li><a href="/wellness-blog">Wellness Blog</a> - Learn more about living a balanced life</li>
-        <li><a href="/community">Community</a> - Connect with like-minded people</li>
+        <li><a href="/yoga-routines" class="welcome-link">Yoga Routines</a> - Discover daily yoga sequences</li>
+        <li><a href="/nutrition-tips" class="welcome-link">Nutrition Tips</a> - Fuel your body with healthy foods</li>
+        <li><a href="/mindfulness" class="welcome-link">Mindfulness Practices</a> - Embrace a peaceful state of mind</li>
+        <li><a href="/wellness-blog" class="welcome-link">Wellness Blog</a> - Learn more about living a balanced life</li>
+        <li><a href="/community" class="welcome-link">Community</a> - Connect with like-minded people</li>
       </ul>
     </section>
   </main>
