--- a/app/assets/stylesheets/user.css
+++ b/app/assets/stylesheets/user.css
@@ -168,3 +168,21 @@ h1.page-title {
     display: none;  /* Hide the image section on very small screens to save space */
   }
 }
+
+/* app/assets/stylesheets/application.css */
+.error-message {
+  color: red;
+  font-size: 12px;
+  margin-top: 5px;
+}
+
+.error-message ul {
+  list-style-type: none;
+  margin: 0;
+  padding: 0;
+}
+
+.error-message li {
+  margin-bottom: 5px;
+}
+
