--- a/app/views/users/new.html.erb
+++ b/app/views/users/new.html.erb
@@ -32,12 +32,33 @@
       <div class="form-field">
         <%= f.label :password, "Password" %>
         <%= f.password_field :password, required: true, placeholder: "Enter your password", class: "input-field" %>
+
+        <% if @user.errors[:password].any? %>
+          <div class="error-message">
+            <ul>
+              <% @user.errors[:password].each do |message| %>
+                <li><%= message %></li>
+              <% end %>
+            </ul>
+          </div>
+        <% end %>
       </div>
+
   
       <div class="form-field">
         <%= f.label :password_confirmation, "Confirm Password" %>
         <%= f.password_field :password_confirmation, required: true, placeholder: "Confirm your password", class: "input-field" %>
       </div>
+
+      <% if @user.errors[:password_confirmation].any? %>
+        <div class="error-message">
+          <ul>
+            <% @user.errors[:password_confirmation].each do |message| %>
+              <li><%= message %></li>
+            <% end %>
+          </ul>
+        </div>
+      <% end %>
   
       <div class="form-field">
         <%= f.check_box :subscribed_to_newsletter, class: "checkbox-field" %>
