--- a/app/views/session/new.html.erb
+++ b/app/views/session/new.html.erb
@@ -26,3 +26,7 @@
     <p><%= link_to "Sign Up", new_user_path, class: "sign-up-link" %></p>
   </div>
 <% end %>
+
+<div class="form-actions">
+  <p><%= link_to "I forgot my password", "/change_password", class: "sign-up-link" %> </p>
+</div>
