Flow for password change

--- a/app/views/password_reset/new_password.html.erb
+++ b/app/views/password_reset/new_password.html.erb
@@ -11,7 +11,7 @@
 <%= content_tag :h1, "Enter new password", class: "page-title" %>
 
 <div class="forgot_password">
-  <%= form_with url: password_reset_path, method: :post, local: true, class: "login-form" do |f| %>
+  <%= form_with url: reset_password_url(params[:token]), method: :post, local: true, class: "login-form" do |f| %>
     <div class="form-field">
       <%= f.label :new_password, "New password" %>
       <%= f.password_field :new_password, required: true, placeholder: "Enter new password", class: "input-field" %>
