--- a/app/views/user_mailer/reset_password.html.erb
+++ b/app/views/user_mailer/reset_password.html.erb
@@ -1,3 +1,3 @@
 <h1>Confirmation Instructions</h1>
 
-<%= link_to "Click the link to change your current password.", reset_password_url(@confirmation_token) %>
+<%= link_to "Click the link to change your current password.", confirm_email_url(@confirmation_token) %>
